# gaudi-metric-exporter

./: .dockerignore  .gitignore  .trivyignore  Makefile  README.md  device.go  exporter.go  go.mod  go.sum  helpers.go  kube.go  main.go  samples.go
cd/: Makefile
deploy/manifests/: metric-exporter-daemonset.yaml  metric-exporter-service.yaml  metric-exporter-serviceMonitor.yaml
rhlml/: Cargo.toml  Dockerfile  build.sh
rhlml/hlml/: Cargo.toml
rhlml/hlml-sys/: Cargo.toml  bindings.rs  build.rs  lib.rs
rhlml/hlml/src/: device.rs  lib.rs
rhlml/src/: error.rs  lib.rs  main.rs
scripts/: setup-env.sh
