[package]
name = "rhlml"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "rhlml"
path = "src/main.rs"


[dependencies]
env_logger = "0.11.5"
hlml = { path = "./hlml/" }
log = "0.4.29"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.148"
